# nloptrbundled

./: .Rbuildignore  .gitattributes  .gitignore  DESCRIPTION  README.Rmd  README.md  configure  configure.ac  nloptrbundled.Rproj
.github/workflows/: R-CMD-check.yaml  test-coverage.yaml
R/: check.derivatives.R  is.nloptr.R  nloptr.R  nloptr.print.options.R  zzz.R
inst/include/: nloptrAPI.h
inst/tinytest/: test-Rosenbrock-banana.R  test-check.derivatives.R  test-derivative-checker.R  test-example.R  test-gradients.R  test-hs023.R  test-hs071.R  test-is.nloptr.R  test-nloptions.R  test-nloptr.R  test-nloptr.add.default.options.R  test-nloptr.print.options.R  test-options-maxtime.R  test-parameters.R  test-print.nloptr.R  test-simple.R  test-systemofeq.R  test-wrapper-auglag.R  test-wrapper-ccsaq.R  test-wrapper-cobyla.R  test-wrapper-direct.R  test-wrapper-global.R  test-wrapper-lbgfs.R  test-wrapper-mlsl.R  test-wrapper-mma.R  test-wrapper-nm.R  test-wrapper-slsqp.R  test-wrapper-tnewton.R  test-wrapper-varmetric.R
src/: init_nloptr.c  init_nloptr.cpp  nloptr.c  nloptr.h
src/libs/: CMakeLists.txt
src/libs/src/algs/auglag/: auglag.c
src/libs/src/algs/bobyqa/: bobyqa.c
src/libs/src/algs/cobyla/: cobyla.c
src/libs/src/algs/cquad/: cquad.c
src/libs/src/api/: deprecated.c  f77funcs.h  general.c  nlopt-internal.h  optimize.c  options.c
src/libs/src/util/: nlopt-util.h  stop.c
src/nlopt/include/: nlopt.h  nlopt.hpp
src/nlopt/lib/pkgconfig/: nlopt.pc
tools/: cmake_call.sh  cmake_config.sh  r_config.sh
vignettes/: nloptr.Rmd
(+15 files in other folders)
